# Numerical-Integration

./: CMakeLists.txt  README.md  algorithms.py  performance_graphs.py
doc/: CONTRIBUTING.md
src/: CMakeLists.txt  main.cpp
src/approximation_methods/: all.hpp  approximations.hpp  trapezoidal_approximation.hpp
src/approximation_methods/approximation/: approximation.hpp
src/approximation_methods/left_hand_approximation/: left_hand_approximation.hpp
src/approximation_methods/mid_point_approximation/: mid_point_approximation.hpp
src/approximation_methods/right_hand_approximation/: right_hand_approximation.hpp
src/approximation_methods/simpsons_approximation/: simpsons_approximation.hpp
src/approximation_methods/trapezoidal_approximation/: trapezoidal_approximation.hpp
src/methods/left_hand_approximation/: left_hand_approximation.hpp
src/methods/mid_point_approximation/: mid_point_approximation.hpp
src/methods/right_hand_rule/: right_hand_rule.hpp
tools/: build_and_run.sh  generate_approximation_files.sh  generate_files_for_approximations.sh  run.sh
